Fixed selector and spacing tweak.

--- a/src/subtitleterms/deckbuilder/css/all_lang.css
+++ b/src/subtitleterms/deckbuilder/css/all_lang.css
@@ -15,12 +15,23 @@ h1 {
   font-size: 36px;
 }
 
-.gloss h2 {
+h2 {
   font-size: 24px;
   text-decoration-line: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 0.5em;
   margin: 0;
+  margin-top: 0.5em;
+  border-bottom: 2px;
+}
+
+/* h2 > span { */
+/* padding: 0 1em; */
+/* display: inline-block; */
+/* } */
+
+p {
+  margin: 0.3em 0;
 }
 
 .gloss p {
